Program ComMonitor ChangeLog


   14.05.2018 1.6.0.0 Rev 0 

   - Solve some problems in handling single and 
     MultipleConnections


   12.05.2018 1.5.0.0 Rev 0 

   - New WpfHexaEditor.NET47 version 1.4 from abbaye
   - Fix some bugs in case of MultipleConnections==false


   03.10.2017 1.4.1.0 Rev 0 

   - Fix bug in ChangeLog (wrong year)
   - Implement MultipleConnections for server 
     (Server now sends data to all connected clients when the 
     Multiple Connections check box is selected)
   - Implement Auto Reconnect for clients (if checkbox is set)
   - implement new HexEditor Control Version 1.2.1 from 
     abbaye


   22.05.2016 1.3.0.0 Rev 0

   - Change the Setup Icon


   13.05.2017 1.2.0.0 Rev 0

   - Made the software more stable
   - Add the cool update mechanism 
     from Don Ho (Notepad++)
   - Add send button in the 
     EditMessageDlg for more convenience
   - Removing the build number in version


   08.04.2017 1.0.0.* Rev 1

   - Resolving binding errors
   - Fix compiler warnings


   08.04.2017 1.0.0.* Rev 0

   - Add new AboutBox

   07.04.2017 0.1.1.* Rev 0

   - Return SelectedTabItemsIndex 
     correct from EditMessages


   04.04.2017 0.1.0.* Rev 0

   - First usable version
   - Create connections as TCP server or client
   - Save and load configured connections
   - Send and receive messages
   - Add and edit messages
   - Save and load message files


   25.03.2017 0.0.0.0 Rev 0

   - Start Version 0.0.0.0  
