@@ -13,6 +13,12 @@
             <setting name="DefaultMessageSize" serializeAs="String">
                 <value>32</value>
             </setting>
+            <setting name="UpdateURL" serializeAs="String">
+                <value>https://uhwgmxorg.com/getDownLoadUrl.php</value>
+            </setting>
+            <setting name="EnableAutoUpdate" serializeAs="String">
+                <value>True</value>
+            </setting>
         </ComMonitor.Properties.Settings>
     </userSettings>
 </configuration>
